# rusty-book-manager

./: Cargo.toml  Makefile.toml  playwright.config.ts
.cargo/: config.toml
.github/workflows/: frontend_ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20251121132810_start.up.sql
adapter/src/database/model/: auth.rs  book.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs
api/tests/api/: book.rs  helper.rs
bruno/: ID 検索.bru  一覧取得.bru  蔵書登録.bru
bruno/auth/: ログアウト.bru  ログイン.bru
bruno/book/: ID 検索.bru  folder.bru  一覧取得.bru  削除.bru  蔵書登録.bru  貸出.bru  貸出一覧.bru  返却.bru
bruno/health check/: API.bru  DB.bru  folder.bru
bruno/user/: 一覧.bru  追加.bru
data/: initial_setup.sql
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx  provider.tsx
frontend/app/_components/: AddUserButton.tsx  BookTable.tsx  CheckoutButton.tsx  CheckoutHistory.tsx  DeleteUserButton.tsx  Header.tsx  Pagination.tsx  ReturnButton.tsx  UpdateUserRoleSelector.tsx  UserTable.tsx
frontend/app/_theme/: index.ts
frontend/app/login/: page.tsx
frontend/app/users/: page.tsx
kernel/: Cargo.toml
kernel/src/repository/: book.rs  checkout.rs  health.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs
src/: main.rs
tests/auth/: session-persistence.spec.ts
(+8 files in other folders)
