[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
kernel.workspace = true
registry.workspace = true
axum.workspace = true
serde.workspace = true
uuid.workspace = true
axum-extra.workspace = true
strum.workspace = true
garde.workspace = true
derive-new.workspace = true
chrono.workspace = true
utoipa.workspace = true
tracing.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
anyhow.workspace = true
mockall.workspace = true
rstest.workspace = true
serde_json = "1.0"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
